objects/Dynamic_Email__c.object
<CustomObject>
    <fields>
        <fullName>Main_Body__c</fullName>
        <label>Main Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Dynamic Emails</relationshipLabel>
        <relationshipName>Dynamic_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Dynamic Emails</relationshipLabel>
        <relationshipName>Dynamic_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sidebar_Body__c</fullName>
        <label>Sidebar Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Standard_Body__c</fullName>
        <label>Standard Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Dynamic Emails</relationshipLabel>
        <relationshipName>Dynamic_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Urgency_URL__c</fullName>
        <formula>CASE(TEXT(Urgency__c), 
&quot;Critical&quot;, &quot;https://c.cs12.content.force.com/servlet/servlet.ImageServer?id=015V0000000574J&amp;oid=00DV0000006NEHJ&amp;lastMod=1358267651000&quot;, 
&quot;Normal&quot;, &quot;https://c.cs12.content.force.com/servlet/servlet.ImageServer?id=015V0000000574O&amp;oid=00DV0000006NEHJ&amp;lastMod=1358267610000&quot;, 
&quot;Low&quot;, &quot;https://c.cs12.content.force.com/servlet/servlet.ImageServer?id=015V0000000574T&amp;oid=00DV0000006NEHJ&amp;lastMod=1358267675000&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Dynamic Email</label>
    <nameField>
        <label>Dynamic Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>